[package]
name = "meow"
version = "0.1.2"
edition = "2025"

[dependencies]
web3 = "0.19.0"
clap = { version = "4.5.32", features = ["derive"] }
dialoguer = "0.11"
dirs = "5.0"
serde_json = "1.0"
anchor-client = { version = "0.28.0 ", features = ["async"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1.0", default-features = false }
solana-sdk = "1.16.9"
solana-client = "1.16.9"
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"], default-features = false }
dotenv = "0.15.0"
serde = "1.0.204"
hex = "0.4"
base64 = "0.21"
hex-literal = "1.0.0"
once_cell="1.21.1"
token-messenger-minter = { git = "https://github.com/circlefin/solana-cctp-contracts", rev = "4477f889732209dfc9a08b3aeaeb9203a324055c", package = "token-messenger-minter" }
message-transmitter = { git = "https://github.com/circlefin/solana-cctp-contracts", rev = "4477f889732209dfc9a08b3aeaeb9203a324055c", package = "message-transmitter" }

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/anza-xyz/curve25519-dalek.git", rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464" }
